--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
     padding:0px;
     margin: 0px;
 }
-
+                                            /*Page 1 index.html CSS Page Starts*/
+/*Nav Bar Section Style*/
 .abdomen
 {
     height:100vh;
@@ -15,22 +16,7 @@
     position:relative;
 }
 
-/*logo Design*/
-.style
-{
-color: white;
-font-size:40px;
-letter-spacing: 3px;
-cursor:pointer;
-margin-left: 80px;
-}
-
-/*span design*/
-span
-{
-    color:yellow;
-}
-
+/*Nav Bar Section Style finished*/
 
 /*Nav Bar Design*/
 nav
@@ -62,10 +48,10 @@ list-style: none;
 margin:35px 45px;
 }
 
-/*Nav Bar list item name style*/
+/*Nav Bar list item name style with hover */
 nav ul li a
 {
-    color:white;
+    color:rgb(237, 249, 70);
     text-decoration: none;
     position:relative;
     font-size:19px;
@@ -80,11 +66,144 @@ position:absolute;
 bottom:-10px;
 left:50%;
 transform:translatex(-45%);
-background:white;
+background:rgb(237, 249, 70);
 transition:width 0.4s;
 }
 
 nav ul li a:hover::after
 {
     width: 50%;
+}
+/*Nav Bar list item name style with hover end */
+
+
+/*logo Design*/
+.style
+{
+color: white;
+font-size:50px;
+letter-spacing: 3px;
+cursor:pointer;
+margin-left: 80px;
+}
+
+/*span design*/
+span
+{
+    color:rgb(0, 255, 17);
+}
+
+/*Content of the index*/
+.Glottis
+{
+    color:white;
+    position:absolute;
+    bottom: 30%;
+    right:5%;
+}
+
+.Glottis h1
+{
+    color:white;
+    font-size: 50px;
+    font-weight: 500;
+}
+
+.Glottis h2
+{
+    color:white;
+font-size:80px;
+line-height:140px;
+margin-left:-10px;
+}
+
+.Glottis p
+{
+    color:white;
+    font-size:38px;
+    font-weight:300;
+}
+/*Content of the index finished*/
+
+/*button style with the copyright disclaimer*/
+button
+{
+color:white;
+background:#d77e39;
+font-size:15px;
+font-weight: 300;
+line-height: 20px;
+padding: 10px 18px;
+border: 4px solid white;
+border-radius:45px;
+cursor: pointer;
+position: relative;
+left: 790px;
+top: 410px;
+
+}
+
+.buccal
+{
+    font:15px;
+    color:white;
+    position: fixed;
+    left:1255px;
+    top:655px;
+    
+}
+
+/*button style with the copyright disclaimer*/
+
+                                            /*Page 1 index.html CSS Page Ends*/
+
+
+
+
+
+
+                                         /*Page 2 of the portfolio.html Starts */
+
+
+
+
+body
+{
+    
+    background-image: url()
+}
+
+h1
+{
+    color:red;
+}
+
+
+
+
+                                         /*Page 2 of the portfolio.html Ends*/
+                                         
+
+                                          /*Page 3 of the Contact.html Starts*/
+
+
+body
+{
+    height: 100vh;
+    width: 100%;
+    background-image:url(./Images/pexels-quintin-gellar-313782.jpg);
+    background-position: center;
+    background-size: cover;
+    position:relative;
+}
+
+h1
+{
+    color:white;
+    align-items: center;
+}
+
+.cord
+{
+    left:500px;
 }
